Fix spacing, wording and button variation

--- a/client/branded/src/search-ui/results/filters/NewSearchFilters.module.scss
+++ b/client/branded/src/search-ui/results/filters/NewSearchFilters.module.scss
@@ -53,10 +53,10 @@
 }
 
 .actions {
-    margin: 0.5rem 0.5rem 0 0.5rem;
+    margin: 0.75rem 0.5rem 0 0.75rem;
     display: flex;
     flex-direction: column;
-    gap: 0.25rem;
+    gap: 0.5rem;
 
     &:empty {
         display: none;
